monitoring/services/pgadmin/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: pgadmin-deployment
  namespace: monitoring
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:3.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/lib/pgadmin
          name: pgadmin-storage
      volumes:
        - name: pgadmin-storage
          persistentVolumeClaim:
            claimName: pgadmin-storage
