monitoring/services/pgadmin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: monitoring
  labels:
    app: pgadmin
spec:
  ports:
  - port: 80
  selector:
    app: pgadmin
