monitoring/services/pgadmin/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pgadmin
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
spec:
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /pgadmin
        backend:
          serviceName: pgadmin-service
          servicePort: 80
